<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/authen_background"
        android:id="@+id/login_bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_bg"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        >
        <!-- Logo -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:contentDescription="Logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textColor="@color/green_button"
            android:textSize="24sp" />

        <!-- Tiêu đề "Chào Mừng" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chào Mừng"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Phụ đề -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng nhập vào tài khoản"
            android:textSize="14sp"
            android:textColor="@color/gray_text"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/green_text"
                />

            <!-- Ô nhập "Tài khoản" -->
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/username_hint"
                android:padding="12dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/green_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_hint"
                android:textColor="@color/green_text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                >
                <!-- Ô nhập "Mật khẩu" -->
                <EditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/password_hint"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/green_text"
                    />
                <ImageView
                    android:id="@+id/ivTogglePasswordLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mdi_eye"
                    android:layout_marginStart="-48dp"
                    android:padding="8dp" />
            </LinearLayout>

        </LinearLayout>


        <!-- Liên kết "Quên mật khẩu?" -->
        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/green_text"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"/>

        <!-- Nút "Đăng nhập" -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:backgroundTint="@color/green_button"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <!-- Liên kết "Chưa có tài khoản? Đăng ký ngay" -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/green_text"
                android:textSize="14sp"

                />
            <TextView
                android:id="@+id/register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/green_button"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>