<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Ảnh nền -->
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_landing_page" />

    <!-- Lớp phủ mờ -->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />  <!-- Màu đen với độ trong suốt 50% -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Nội dung hiển thị trên màn hình -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:id="@+id/landing_page_content"
            android:layout_marginTop="50dp">

            <!-- Tiêu đề ứng dụng -->
            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <!-- Mô tả ứng dụng -->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landing_page_description"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
            <!-- Nút bắt đầu -->
        <Button
            android:id="@+id/btnStart"
            android:layout_width="250dp"
            android:layout_height="58dp"
            android:layout_below="@id/landing_page_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:background="@drawable/button_start_background"
            android:text="@string/button_start_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>
