<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/authen_background"
            android:layout_marginTop="-60dp"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_marginTop="16dp"
            />

        <!-- Tên ứng dụng -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/green_button"
            android:layout_marginBottom="12sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="28dp"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E-mail"
                android:textColor="@color/green_text"
                />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Nhập email của bạn"
                android:background="@drawable/edittext_background"
                android:paddingStart="12dp"
                android:textColor="@color/green_text"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="28dp"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mật khẩu"
                android:textColor="@color/green_text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Nhập mật khẩu của bạn"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="12dp"
                    android:inputType="textPassword"
                    android:textColor="@color/green_text"
                    />
                <ImageView
                    android:id="@+id/ivTogglePassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mdi_eye"
                    android:layout_marginStart="-48dp"
                    android:padding="8dp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="28dp"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xác nhận mật khẩu"
                android:textColor="@color/green_text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Nhập lại mật khẩu"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="12dp"
                    android:inputType="textPassword"
                    android:textColor="@color/green_text"
                    />
                <ImageView
                    android:id="@+id/ivToggleConfirmPassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mdi_eye"
                    android:layout_marginStart="-48dp"
                    android:padding="8dp" />
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bằng việc xác nhận, bạn đồng ý với điều khoản sử dụng của chúng tôi."
            android:textSize="14sp"
            android:textColor="@color/green_text"
            android:layout_marginHorizontal="28dp"
            />

        <!-- Nút Đăng ký -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="ĐĂNG KÝ"
            android:backgroundTint="@color/green_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

        <!-- Liên kết Đăng nhập -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_account"
                android:textColor="@color/green_text"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textColor="@color/green_button"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>